# rustfolio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.yew  README.md  clean.sh  docker-compose.yml  docker-entrypoint.sh  gitignore  run_all_exercises.sh
exercice01-bases/: Cargo.toml
exercice01-bases/src/: main.rs
exercice02-fonctions/: Cargo.toml
exercice02-fonctions/src/: main.rs
exercice03-propriete/: Cargo.toml
exercice03-propriete/src/: main.rs
hello-rs/: Cargo.toml
hello-rs/src/: main.rs
rustfolio/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.yew  Trunk.toml  docker-entrypoint.sh
rustfolio/assets/css/: style.css
rustfolio/assets/dashboard/: dashboard-spa.js  index.html
rustfolio/assets/js/: portfolio.js
rustfolio/dashboard-spa/: Cargo.toml  Dockerfile.yew  Trunk.toml  index.html
rustfolio/dashboard-spa/src/: app.rs  lib.rs  main.rs  router.rs  store.rs  store_builder.rs  store_cv.rs
rustfolio/dashboard-spa/src/api/: mod.rs
rustfolio/dashboard-spa/src/components/: add_row_placeholder.rs  mod.rs  nav.rs
rustfolio/dashboard-spa/src/pages/: account.rs  builder.rs  builder_sidebar.rs  cv_form.rs  experiences.rs  mod.rs  nav.rs  overview.rs  profile.rs
rustfolio/data/: experience_fr.json  skills.json
rustfolio/migrations/: 0001_init.sql  0003_user_profiles.sql  0004_cv_data.sql  0005_cv_layout.sql  0006_profiles.sql  0007_experiences.sql  0008_experience_tasks.sql  0009_skills.sql  0010_projects.sql  0011_project_technologies.sql  0012_experience_dates.sql  0013_experience_website.sql  0014_add_skills.sql  0015_add_logo_url_to_skills.sql
rustfolio/src/: data.rs  main.rs  middleware.rs  templates.rs  types.rs
rustfolio/src/routes/: api.rs  auth.rs  cv.rs  cv_normalized.rs  health.rs  pages.rs  profile.rs  skills.rs
rustfolio/templates/: base.html  dashboard.html  dashboard_shell.html  home.html  index.html  portfolio.html  projects.html
rustfolio/templates/auth/: login.html  signup.html
web-hello/: Cargo.toml
web-hello/assets/css/: style.css
web-hello/assets/js/: projects.js
web-hello/data/: graphicPortfolio.json  projects.json  skills.json
web-hello/migrations/: 0002_email_verification.sql
web-hello/src/: data.rs  main.rs  state.rs  templates.rs
web-hello/src/routes/: api.rs  auth.rs  pages.rs
web-hello/templates/: base.html  index.html  projects.html
web-hello/templates/auth/: login.html
