[workspace]
resolver = "2"
members = [
    "exercice01-bases",
    "exercice02-fonctions", 
    "exercice03-propriete",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rustfolio learner"]

[workspace.dependencies]
# Dépendances communes pour les exercices
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"