[package]
name = "rustfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
time = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] } # pour Utc::now().year()
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
lettre = { version = "0.11", default-features = false, features = [
  "builder",             # Message::builder()
  "smtp-transport",      # Transport SMTP
  "tokio1",              # Async + tokio
  "tokio1-rustls-tls"    # TLS via rustls (pas d'OpenSSL)
] }
