[package]
name = "dashboard-spa"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
gloo = { version = "0.11", features = ["utils"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
