[package]
name = "dashboard-spa"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = "0.11"
yewdux = "0.11"             # ⬅️ upgrade, plus d’anymap externe
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement","HtmlTextAreaElement","RequestCredentials"] }
