[package]
name = "dashboard-spa"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "Document", "Element", "HtmlInputElement","HtmlTextAreaElement","RequestCredentials"] }